# NovusCore-Common

./: CMakeLists.txt
cmake/: Configuration.cmake
common/: CMakeLists.txt  NovusTypes.h
common/CVar/: CVarSystem.cpp  CVarSystem.h  CVarSystemPrivate.cpp  CVarSystemPrivate.h
common/Containers/: DataStorage.h  DynamicArray.h  StringTable.cpp  StringTable.h
common/Database/: DBConnection.cpp  DBConnection.h  DBTypes.h
common/Database/mysql/: DatabaseWorker.h  Field.h  Mysql.cpp  Mysql.h  QueryResult.cpp  QueryResult.h
common/Dependencies/: CMakeLists.txt
common/Math/: BigNumber.cpp  BigNumber.h  Color.cpp  Color.h  Geometry.cpp  Geometry.h  Math.cpp  Math.h  Sha256.cpp  Sha256.h  Vector2i.cpp  Vector2i.h
common/Memory/: Allocator.cpp  Allocator.h  BufferRangeAllocator.cpp  BufferRangeAllocator.h  MemoryTracker.cpp  MemoryTracker.h  StackAllocator.cpp  StackAllocator.h
common/Utils/: ByteBuffer.cpp  ByteBuffer.h  CPUInfo.cpp  CPUInfo.h  DebugHandler.cpp  DebugHandler.h  DynamicBytebuffer.h  FileReader.h  JsonConfig.cpp  JsonConfig.h  Message.h  SafeUnorderedMap.h  SafeVector.h  SharedPool.h  StringUtils.cpp  StringUtils.h  StrongTypedef.h  XXHash64.h  srp.cpp  srp.h
dep/: CMakeLists.txt
dep/Entt/: CMakeLists.txt
dep/Entt/Entt/core/: type_info.hpp
dep/TracyProfiler/: CMakeLists.txt
dep/TracyProfiler/tracy/: TracyVulkan.hpp
dep/TracyProfiler/tracy/client/: tracy_concurrentqueue.h
dep/angelscript/: CMakeLists.txt
dep/angelscript/angelscript/: as_criticalsection.h
dep/bzip2/: CMakeLists.txt
dep/libmpq/: CMakeLists.txt
dep/npas4/: CMakeLists.txt  Npas4.cpp
dep/stormlib/: CMakeLists.txt
dep/stormlib/lib/: StormLibDAD.lib  StormLibDAS.lib  StormLibDUD.lib  StormLibDUS.lib  StormLibRAD.lib  StormLibRAS.lib  StormLibRUD.lib  StormLibRUS.lib  storm.lib  stormlib.lib
dep/zlib/: CMakeLists.txt
network-lib/: CMakeLists.txt
network-lib/Networking/: AddressType.h  BaseServer.cpp  BaseServer.h  BaseSocket.h  Connection.cpp  Connection.h  ConnectionStatus.h  Defines.h  InputQueue.cpp  InputQueue.h  MessageHandler.cpp  MessageHandler.h  NetPacket.h  NetworkClient.cpp  NetworkClient.h  NetworkPacket.cpp  NetworkPacket.h  NetworkServer.cpp  NetworkServer.h  Opcode.h  Packet.h  PacketHeader.h  PacketUtils.h  RegionType.h
shadercooker-lib/: CMakeLists.txt
shadercooker-lib/ShaderCooker/: DxcBridge.cpp  DxcBridge.h  Permutation.h  ShaderCache.cpp  ShaderCache.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderCooker.cpp  ShaderCooker.h
shadercooker-lib/ShaderCooker/Lexer/: Lexer.cpp  Lexer.h
shadercooker-lib/ShaderCooker/Parser/: Parser.cpp  Parser.h
